fixed scrollbar issue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,10 +12,8 @@ $green-color: #4bb34b;
   font-weight: 300;
 }
 
-html,
-body {
-  max-width: 100%;
-  overflow-x: hidden;
+html {
+  display: flex;
 }
 
 body {
@@ -80,7 +78,7 @@ body {
 
 #main-header-container {
   // border: purple solid 1px;
-  margin: 0px 0px 0px 8px;
+  margin: 0px 0px 0px 24px;
   width: 1106px;
   display: flex;
   flex-direction: row;
@@ -177,7 +175,9 @@ body {
 }
 
 #main-container {
+  margin: 0px 0px 0px 16px;
   margin-top: 48px;
+  // margin-top: 148px;
   display: flex;
   flex-direction: row;
   height: auto;
@@ -494,14 +494,14 @@ body {
   border: $grey-primary 1px solid;
 }
 
-// #new-container {
-//   width: 100%;
-//   height: 55px;
-//   border-radius: 10px;
-//   margin-top: 15px;
-//   background-color: $primary-color;
-//   border: $grey-primary 1px solid;
-// }
+#new-container {
+  width: 100%;
+  height: 55px;
+  border-radius: 10px;
+  margin-top: 15px;
+  background-color: $primary-color;
+  border: $grey-primary 1px solid;
+}
 
 // #gifts {
 //   width: 100%;
